Добавляет доработки проекта

--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -112,6 +112,7 @@
   width: 100%;
   min-height: 500px;
   height: auto;
+  border-radius: 16px;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
