--- a/source/sass/blocks/input-textarea.scss
+++ b/source/sass/blocks/input-textarea.scss
@@ -1,20 +1,35 @@
 .input-textarea {
+  display: flex;
+  flex-direction: column;
+  gap: 12px;
   margin: 0;
   padding: 0;
   border: 0;
 }
 
-.input-textarea h3 {
-  margin: 0 0 12px;
+.input-textarea__label {
+  margin: 0;
   color: $color-timber-wolf-opacity80;
   font-size: 14px;
   font-weight: 400;
   line-height: 18px;
 }
 
-.input-textarea textarea {
+.input-textarea__input {
+  padding: 16px 25px;
   width: 100%;
+  color: $color-default-white;
   background-color: transparent;
   border: 1px solid $color-default-white-opacity30;
   border-radius: 8px;
+  order: 2;
+
+  @include hover-focus-visible {
+    border: 1px solid $color-default-white;
+  }
 }
+
+.input-textarea__input:hover ~ .input-textarea__label {
+  color: $color-timber-wolf;
+}
+
