--- a/source/sass/blocks/modal.scss
+++ b/source/sass/blocks/modal.scss
@@ -41,7 +41,7 @@
     padding: 60px 40px;
 
     @include vp-767 {
-      padding: 60px 16px;
+      padding: 0 15px;
     }
   }
 
@@ -60,28 +60,49 @@
     position: relative;
     width: 510px;
     padding: 60px 80px;
+    border-radius: 16px;
 
     background-color: $color-default-white;
 
     @include vp-767 {
       width: 100%;
-      padding: 20px;
+      padding: 40px 15px;
     }
   }
 
   &__close-btn {
     position: absolute;
-    top: 22px;
-    right: 22px;
+    top: 30px;
+    right: 30px;
     z-index: 1;
-
-    width: 40px;
-    height: 40px;
+    width: 22px;
+    height: 22px;
     padding: 0;
-
-    background: $color-brown;
+    background: transparent;
     border: none;
     cursor: pointer;
+
+    &::before,
+    &::after {
+      content: "";
+      position: absolute;
+      top: 50%;
+      right: 0;
+      width: 28px;
+      height: 1px;
+      background-color: $color-default-blue;
+      z-index: 2;
+    }
+
+    &::before {
+      transform: rotate(45deg);
+      box-shadow: none;
+    }
+
+    &::after {
+      transform: rotate(-45deg);
+      box-shadow: none;
+    }
   }
 
   &--responsive {
@@ -108,6 +129,8 @@
   flex-direction: column;
   align-items: center;
   gap: 20px;
+  padding: 0 20px;
+  margin: 0 0 30px;
 }
 
 .modal__header h2 {
@@ -116,14 +139,43 @@
   font-size: 32px;
   font-weight: 400;
   line-height: 36px;
+
+  @include vp-1199 {
+    font-size: 28px;
+    line-height: 28px;
+  }
+
+  @include vp-767 {
+    font-size: 18px;
+    line-height: 18px;
+  }
 }
 
 .modal__header p {
   margin: 0;
+  text-align: center;
+
+  @include vp-1199 {
+    line-height: 20px;
+  }
+
+  @include vp-767 {
+    font-size: 14px;
+  }
 }
 
 .modal__content form {
   display: flex;
   flex-direction: column;
   gap: 20px;
+  margin: 0 0 30px;
+}
+
+.modal__btn {
+  margin: 0 auto;
+  width: 194px;
+
+  @include vp-767 {
+    width: 100%;
+  }
 }
