Добавляет валидацию формы

--- a/source/sass/blocks/input-textarea.scss
+++ b/source/sass/blocks/input-textarea.scss
@@ -33,3 +33,8 @@
   color: $color-timber-wolf;
 }
 
+
+.input-textarea.is-invalid .input-textarea__input {
+  background-color: $color-red-opacity20;
+  border: 1px solid $color-red;
+}
