--- a/source/sass/blocks/custom-select.scss
+++ b/source/sass/blocks/custom-select.scss
@@ -1,45 +1,17 @@
 .custom-select {
   position: relative;
-
-  width: 300px;
-  padding: 14px 0 28px;
-  margin: 0 0 44px 0;
-
-  @media screen and (max-width: 767px) {
-    padding: 4px 0 14px;
-    width: 100%;
-  }
+  display: flex;
+  flex-direction: column;
+  width: 100%;
 
   &__label {
-    position: absolute;
-    top: 50%;
-    left: 10px;
-
-    transform: translateY(-50%);
-
-    transition: transform 0.3s ease, opacity  0.3s ease;
-
-    pointer-events: none;
-
-    @media screen and (max-width: 767px) {
-      transform: translateY(calc(-50% - 5px));
-    }
-  }
-
-  &__placeholder {
-    position: absolute;
-    top: 50%;
-    left: 10px;
-
-    transform: translateY(-50%);
-
-    transition: transform 0.3s ease, opacity 0.3s ease;
-
-    pointer-events: none;
-
-    @media screen and (max-width: 767px) {
-      transform: translateY(calc(-50% - 5px));
-    }
+    margin: 0 0 12px;
+    color: $color-timber-wolf-opacity80;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 14px;
+    order: 1;
   }
 
   select {
@@ -63,35 +35,25 @@
     display: flex;
     align-items: center;
     width: 100%;
-    height: 48px;
-    padding: 5px 10px;
+    height: 50px;
+    padding: 17px 20px;
 
-    background-color: rgba(255, 255, 255, 0);
-    border: 2px solid rgba(0, 0, 0, 0.2);
-    border-radius: 5px;
+    background-color: transparent;
+    border: 1px solid $color-default-white-opacity30;
+    border-radius: 8px;
     outline: none;
     cursor: pointer;
+    order: 2;
 
-    transition: border 0.3s ease;
-
-    &:hover {
-      border: 2px solid rgba(0, 0, 0, 0.5);
-    }
-
-    &:focus {
-      border: 2px solid rgba(0, 0, 0, 0.8);
-    }
-
-    &:disabled {
-      pointer-events: none;
-      opacity: 0.3;
+    @include hover {
+      border: 1px solid $color-default-white;
     }
   }
 
   &__list {
     position: absolute;
     bottom: 10px;
-    z-index: 1;
+    z-index: 2;
 
     width: 100%;
     max-height: 100px;
@@ -143,18 +105,6 @@
     }
   }
 
-  &__error {
-    position: absolute;
-    bottom: -15px;
-    left: 0;
-
-    color: #ff1553;
-
-    opacity: 0;
-
-    transition: opacity 0.1s ease;
-  }
-
   &__text {
     font-size: 20px;
     line-height: 24px;
@@ -181,7 +131,7 @@
     height: 10px;
     margin-left: auto;
 
-    background-color: #000000;
+    background-color: $color-default-white;
 
     transition: transform 0.3s ease;
 
@@ -213,19 +163,11 @@
     .custom-select__icon {
       transform: rotate(180deg);
     }
-
-    .custom-select__label {
-      opacity: 0;
-    }
   }
 
   &.not-empty {
     .custom-select__text {
       opacity: 1;
-    }
-
-    .custom-select__label {
-      opacity: 0;
     }
 
     .custom-select__placeholder {
@@ -234,69 +176,9 @@
   }
 
   &.is-invalid {
-    .custom-select__error {
-      opacity: 1;
-    }
-
     .custom-select__button {
-      border: 2px solid #ff1553;
-
-      &:focus,
-      &:hover {
-        border: 2px solid rgba(#ff1553, 0.5);
-      }
-    }
-  }
-
-  /* &.is-valid {
-    .custom-select__button {
-      border: 2px solid $color-eucalyptus;
-
-      &:focus,
-      &:hover {
-        border: 2px solid rgba($color-eucalyptus, 0.5);
-      }
-    }
-  } */
-
-  &--placeholder {
-    .custom-select__label {
-      transform: translateY(calc(-50% - 40px));
-      opacity: 1;
-    }
-
-    &.is-open .custom-select__label {
-      opacity: 1;
-    }
-
-    &.not-empty .custom-select__label {
-      opacity: 1;
-    }
-  }
-
-  &.slide-up.not-empty,
-  &.slide-up.is-open {
-    .custom-select__label {
-      transform: translateY(calc(-50% - 40px));
-      opacity: 1;
-    }
-
-    .custom-select__text {
-      opacity: 1;
-    }
-  }
-
-  .input-message {
-    position: absolute;
-    right: 0;
-    bottom: -5px;
-
-    &.is-invalid {
-      color: #ff0000;
-    }
-
-    &.is-valid {
-      color: #15ab07;
+      background-color: $color-red-opacity20;
+      border: 1px solid $color-red;
     }
   }
 }
