--- a/source/sass/blocks/programs.scss
+++ b/source/sass/blocks/programs.scss
@@ -3,7 +3,6 @@
   flex-wrap: wrap;
   justify-content: space-between;
   align-items: center;
-  gap: 40px;
   padding: 0 0 120px;
 }
 
@@ -40,6 +39,7 @@
 
 .programs__swiper {
   flex-basis: 100%;
+  margin: 45px 0 35px;
 
   @include vp-767 {
     order: 3;
