--- a/source/sass/blocks/hero-main.scss
+++ b/source/sass/blocks/hero-main.scss
@@ -91,7 +91,7 @@
   position: relative;
   display: flex;
   gap: 30px;
-  padding: 0 50px 35px 50px;
+  padding: 0 50px 20px;
   width: 62.26%;
   color: $color-default-profect;
   background-color: $color-default-white;
@@ -124,6 +124,8 @@
 }
 
 .hero-main__description {
+  margin: -7px 0 7px;
+
   @include vp-767 {
     position: relative;
     padding: 0 14px 15px;
@@ -157,6 +159,7 @@
 }
 
 .hero-main__link {
+  margin: 5px 0;
   min-width: 196px;
 
   @include vp-767 {
