--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -8,7 +8,7 @@
   justify-content: space-between;
   align-items: center;
   flex-wrap: wrap;
-  gap: 80px;
+  gap: 73px;
   padding: 120px 0;
 
   @include vp-1199 {
@@ -24,7 +24,7 @@
 }
 
 .contacts__header h2 {
-  margin: 0;
+  margin: -20px 0 0;
   font-size: 50px;
   font-weight: 400;
   line-height: 50px;
@@ -63,7 +63,7 @@
 }
 
 .contacts__item h3 {
-  margin: 0 0 24px;
+  margin: 0 0 15px;
   color: $color-timber-wolf;
   font-size: 12px;
   font-weight: 400;
