Добавляет проверку ПП для таблет блок Херо, о нас и программы

--- a/source/sass/blocks/about.scss
+++ b/source/sass/blocks/about.scss
@@ -3,13 +3,20 @@
   display: flex;
   flex-wrap: wrap;
   gap: 60px 0;
+
+  @include vp-1199 {
+    padding: 100px 0;
+    gap: 30px 0;
+  }
 }
 
 .about__header {
   flex-basis: 50%;
+  padding: 0 55px 0 0;
 
   @include vp-1199 {
-    flex-basis: 100%;
+    flex-basis: 75%;
+    padding: 0;
   }
 }
 
@@ -21,6 +28,7 @@
   line-height: 50px;
 
   @include vp-1199 {
+    margin: 0 0 24px;
     font-size: 34px;
   }
 
@@ -32,7 +40,6 @@
 
 .about__header p {
   margin: 0;
-  width: 77%;
   font-size: 22px;
   font-weight: 400;
   line-height: 32px;
@@ -54,8 +61,9 @@
   padding: 0 106px 0 15px;
 
   @include vp-1199 {
-    flex-basis: 100%;
+    flex-basis: 75%;
     padding: 0;
+    margin: 0 0 30px;
   }
 }
 
@@ -67,6 +75,7 @@
   line-height: 36px;
 
   @include vp-1199 {
+    margin: 0 0 22px;
     font-size: 28px;
     line-height: 28px;
   }
@@ -81,6 +90,7 @@
   margin: 0 0 33px;
 
   @include vp-1199 {
+    margin: 0 0 36px;
     line-height: 20px;
   }
 
@@ -110,8 +120,8 @@
   list-style-type: none;
 
   @include vp-1199 {
-    flex-direction: column;
-    padding: 62px 40px;
+    gap: 42px 52px;
+    padding: 61px 40px 40px 60px;
   }
 
   @include vp-767 {
@@ -145,12 +155,11 @@
   @include vp-1199 {
     flex-direction: column;
     align-items: flex-start;
-    gap: 12px;
-    padding: 30px;
+    gap: 8px;
+    padding: 30px 28px 25px;
   }
 
   @include vp-767 {
-    gap: 8px;
     padding: 24px 20px;
   }
 }
@@ -178,12 +187,14 @@
   text-transform: uppercase;
 
   @include vp-1199 {
+    margin: 0 75px 0 0;
     font-size: 20px;
     line-height: 22px;
     letter-spacing: 0.2px;
   }
 
   @include vp-767 {
+    margin: 0;
     font-size: 16px;
     line-height: 20px;
     letter-spacing: 0.16px;
@@ -197,6 +208,10 @@
   font-size: 16px;
   font-weight: 300;
   line-height: 20px;
+
+  @include vp-1199 {
+    margin: 0;
+  }
 
   @include vp-767 {
     font-size: 14px;
