--- a/source/sass/blocks/hero-main.scss
+++ b/source/sass/blocks/hero-main.scss
@@ -98,7 +98,7 @@
   border-radius: 0 0 30px 30px;
 
   @include vp-1199 {
-    padding: 0 40px 35px 40px;
+    padding: 3px 40px 25px;
     width: 87.2%;
   }
 
@@ -159,15 +159,23 @@
 }
 
 .hero-main__link {
-  margin: 5px 0;
-  min-width: 196px;
+  min-width: 194px;
 
   @include vp-767 {
     position: relative;
+    margin: 0;
     padding: 10px 15px;
     min-width: 182px;
     background-color: $color-default-white;
     border-radius: 0 0 14px 14px;
+  }
+}
+
+.hero-main__link a {
+  margin: 5px 0;
+
+  @include vp-1199 {
+    margin: -2px;
   }
 }
 
