--- a/source/sass/blocks/programs.scss
+++ b/source/sass/blocks/programs.scss
@@ -4,6 +4,10 @@
   justify-content: space-between;
   align-items: center;
   padding: 0 0 123px;
+
+  @include vp-1199 {
+    padding: 0 0 100px;
+  }
 }
 
 .programs__header {
@@ -40,6 +44,10 @@
 .programs__swiper {
   flex-basis: 100%;
   margin: 45px 0 37px;
+
+  @include vp-1199 {
+    margin: 40px 0;
+  }
 
   @include vp-767 {
     order: 3;
