Добавляет исправления(разные)

--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -30,7 +30,7 @@
   line-height: 50px;
 
   @include vp-1199 {
-    margin: 0 0 43px;
+    margin: 0 0 30px;
     font-size: 34px;
   }
 
@@ -45,6 +45,7 @@
   display: flex;
   flex-wrap: wrap;
   align-items: flex-start;
+  justify-content: space-between;
   gap: 51px;
   margin: 0;
   padding: 0;
@@ -52,6 +53,7 @@
   border-radius: 16px;
 
   @include vp-1199 {
+    width: 100%;
     margin: 0 0 80px;
   }
 
