--- a/source/sass/blocks/about.scss
+++ b/source/sass/blocks/about.scss
@@ -8,6 +8,10 @@
     padding: 100px 0;
     gap: 30px 0;
   }
+
+  @include vp-767 {
+    padding: 70px 0 50px;
+  }
 }
 
 .about__header {
@@ -17,6 +21,10 @@
   @include vp-1199 {
     flex-basis: 75%;
     padding: 0;
+  }
+
+  @include vp-767 {
+    flex-basis: 100%;
   }
 }
 
@@ -33,6 +41,7 @@
   }
 
   @include vp-767 {
+    margin: 0 0 15px;
     font-size: 20px;
     line-height: 20px;
   }
@@ -65,6 +74,11 @@
     padding: 0;
     margin: 0 0 30px;
   }
+
+  @include vp-767 {
+    flex-basis: 100%;
+    margin: 0;
+  }
 }
 
 .about__info h2 {
@@ -81,6 +95,7 @@
   }
 
   @include vp-767 {
+    margin: 0 0 10px;
     font-size: 18px;
     line-height: 22px;
   }
@@ -160,7 +175,8 @@
   }
 
   @include vp-767 {
-    padding: 24px 20px;
+    gap: 5px;
+    padding: 24px 16px;
   }
 }
 
