--- a/source/sass/blocks/form.scss
+++ b/source/sass/blocks/form.scss
@@ -1,5 +1,9 @@
 .form__wrapper {
   padding: 120px 0 55px;
+
+  @include vp-1199 {
+    padding: 67px 0 55px;
+  }
 }
 
 .form__image {
@@ -20,12 +24,13 @@
 }
 
 .form__content {
-  padding: 80px 74px 51px;
+  padding: 60px 74px 51px;
   width: 498px;
   background-color: $color-default-blue;
   border-radius: 16px;
 
   @include vp-1199 {
+    padding: 55px 44px 51px;
     width: 442px;
   }
 
@@ -48,6 +53,16 @@
   font-size: 32px;
   font-weight: 400;
   line-height: 36px;
+
+  @include vp-1199 {
+    font-size: 28px;
+    line-height: 28px;
+  }
+
+  @include vp-767 {
+    font-size: 18px;
+    line-height: 22px;
+  }
 }
 
 .form__header p {
