--- a/source/sass/blocks/grant.scss
+++ b/source/sass/blocks/grant.scss
@@ -10,11 +10,13 @@
 
   @include vp-1199 {
     grid-template-columns: 1fr;
-    padding: 100px 0 100px;
+    gap: 47px;
+    padding: 98px 0 130px;
   }
 
   @include vp-767 {
-    padding: 67px 0;
+    gap: 35px;
+    padding: 67px 0 40px;
   }
 }
 
@@ -22,7 +24,6 @@
   padding: 0 105px 0 0;
 
   @include vp-1199 {
-    margin: 0 0 50px;
     padding: 0;
   }
 }
@@ -35,10 +36,12 @@
   line-height: 50px;
 
   @include vp-1199 {
+    margin: 0 0 28px;
     font-size: 34px;
   }
 
   @include vp-767 {
+    margin: 0 0 18px;
     font-size: 20px;
     line-height: 20px;
   }
@@ -49,10 +52,12 @@
   color: $color-timber-wolf;
 
   @include vp-1199 {
+    margin: 0 0 35px;
     line-height: 20px;
   }
 
   @include vp-767 {
+    margin: 0 0 25px;
     font-size: 14px;
   }
 }
@@ -84,11 +89,13 @@
   line-height: 36px;
 
   @include vp-1199 {
+    margin: 0 0 43px;
     font-size: 28px;
     line-height: 28px;
   }
 
   @include vp-767 {
+    margin: 0 0 35px;
     font-size: 18px;
     line-height: 22px;
   }
@@ -126,6 +133,10 @@
     height: 42px;
     background-color: $color-default-blue;
     content: "";
+  }
+
+  @include vp-767 {
+    padding: 20px 15px;
   }
 }
 
