--- a/source/sass/blocks/news.scss
+++ b/source/sass/blocks/news.scss
@@ -1,5 +1,13 @@
 .news__wrapper {
   padding: 125px 0;
+
+  @include vp-1199 {
+    padding: 98px 0;
+  }
+
+  @include vp-767 {
+    padding: 68px 0;
+  }
 }
 
 .news__wrapper h2 {
@@ -9,6 +17,16 @@
   font-size: 50px;
   font-weight: 400;
   line-height: 50px;
+
+  @include vp-1199 {
+    margin: 0 0 32px;
+    font-size: 34px;
+  }
+
+  @include vp-767 {
+    font-size: 20px;
+    line-height: 20px;
+  }
 }
 
 .news__controls {
@@ -18,6 +36,15 @@
   flex-wrap: wrap;
   gap: 34px;
   margin: 0 0 37px;
+
+  @include vp-1199 {
+    gap: 10px;
+  }
+
+  @include vp-767 {
+    justify-content: flex-start;
+    flex-wrap: nowrap;
+  }
 }
 
 .news__control {
@@ -31,6 +58,10 @@
   letter-spacing: 0.28px;
   text-transform: uppercase;
   cursor: pointer;
+
+  @include vp-1199 {
+    padding: 10px 20px;
+  }
 
   @include hover-focus-visible {
     color: $color-default-blue;
