--- a/source/sass/blocks/news.scss
+++ b/source/sass/blocks/news.scss
@@ -1,8 +1,11 @@
 .news__wrapper {
-  padding: 125px 0;
+  margin: 0 auto;
+  padding: 125px 100px;
+  width: 100%;
+  max-width: 1440px;
 
   @include vp-1199 {
-    padding: 98px 0;
+    padding: 98px 45px;
   }
 
   @include vp-767 {
@@ -29,6 +32,12 @@
   }
 }
 
+.news__controls-swiper {
+  @include vp-767 {
+    padding: 0 0 0 15px;
+  }
+}
+
 .news__controls {
   display: flex;
   justify-content: center;
@@ -44,6 +53,7 @@
   @include vp-767 {
     justify-content: flex-start;
     flex-wrap: nowrap;
+    gap: 0;
   }
 }
 
@@ -63,8 +73,22 @@
     padding: 10px 20px;
   }
 
+  @include vp-767 {
+    flex: 1;
+    padding: 10px 14px;
+    font-size: 12px;
+    line-height: 12px;
+    letter-spacing: 0.24px;
+  }
+
   @include hover-focus-visible {
     color: $color-default-blue;
+  }
+}
+
+.news__controls .swiper-slide {
+  @include vp-767 {
+    width: 100%;
   }
 }
 
@@ -76,6 +100,10 @@
 
 .news__swiper {
   margin: 0 0 40px;
+
+  @include vp-767 {
+    padding: 0 15px;
+  }
 }
 
 .news__list {
@@ -87,6 +115,10 @@
 .news__buttons {
   position: relative;
   height: 32px;
+
+  @include vp-767 {
+    padding: 0 15px;
+  }
 }
 
 .news__buttons .swiper-pagination {
