Добавляет ПП проекта

--- a/source/sass/blocks/form.scss
+++ b/source/sass/blocks/form.scss
@@ -68,6 +68,14 @@
 .form__header p {
   margin: 0;
   color: $color-timber-wolf-opacity90;
+
+  @include vp-1199 {
+    line-height: 20px;
+  }
+
+  @include vp-767 {
+    font-size: 14px;
+  }
 }
 
 .form form {
