--- a/source/sass/blocks/grant.scss
+++ b/source/sass/blocks/grant.scss
@@ -16,7 +16,7 @@
 
   @include vp-767 {
     gap: 35px;
-    padding: 67px 0 40px;
+    padding: 68px 0;
   }
 }
 
@@ -41,7 +41,7 @@
   }
 
   @include vp-767 {
-    margin: 0 0 18px;
+    margin: 0 0 13px;
     font-size: 20px;
     line-height: 20px;
   }
@@ -95,7 +95,7 @@
   }
 
   @include vp-767 {
-    margin: 0 0 35px;
+    margin: 0 0 27px;
     font-size: 18px;
     line-height: 22px;
   }
@@ -115,6 +115,8 @@
 
   @include vp-767 {
     grid-template-columns: 1fr;
+    gap: 15px;
+    margin: 0 0 0 15px;
   }
 }
 
@@ -136,7 +138,12 @@
   }
 
   @include vp-767 {
-    padding: 20px 15px;
+    padding: 18px 24px;
+
+    &::before {
+      width: 32px;
+      height: 32px;
+    }
   }
 }
 
@@ -151,6 +158,11 @@
   line-height: 22px;
   letter-spacing: 0.22px;
   text-transform: uppercase;
+
+  @include vp-767 {
+    font-size: 18px;
+    line-height: 18px;
+  }
 }
 
 .grant__item h4 {
