--- a/source/sass/blocks/reviews-card.scss
+++ b/source/sass/blocks/reviews-card.scss
@@ -10,7 +10,7 @@
   @include vp-767 {
     grid-template-columns: 1fr;
     gap: 0;
-    padding: 30px 15px;
+    padding: 30px 15px 25px;
   }
 }
 
@@ -20,6 +20,7 @@
   gap: 15px;
 
   @include vp-767 {
+    gap: 10px;
     margin: 0 0 15px;
   }
 }
@@ -29,6 +30,11 @@
   height: 90px;
   background-color: $color-default-blue;
   border-radius: 50%;
+
+  @include vp-767 {
+    width: 60px;
+    height: 60px;
+  }
 }
 
 .reviews-card__header img {
@@ -47,6 +53,11 @@
 
   @include vp-1199 {
     font-size: 20px;
+  }
+
+  @include vp-767 {
+    font-size: 14px;
+    line-height: 18px;
   }
 }
 
@@ -73,6 +84,10 @@
   display: flex;
   flex-direction: column;
   gap: 11px;
+
+  @include vp-767 {
+    gap: 6px;
+  }
 }
 
 .reviews-card__item h4 {
@@ -92,6 +107,12 @@
 
   @include vp-1199 {
     line-height: 20px;
+  }
+
+  @include vp-767 {
+    color: $color-default-profect-opacity90;
+    font-size: 12px;
+    line-height: 14px;
   }
 }
 
@@ -114,6 +135,11 @@
     font-size: 20px;
     line-height: 24px;
   }
+
+  @include vp-767 {
+    font-size: 16px;
+    line-height: 18px;
+  }
 }
 
 .reviews-card__content p {
@@ -121,5 +147,9 @@
 
   @include vp-1199 {
     line-height: 20px;
+  }
+
+  @include vp-767 {
+    font-size: 14px;
   }
 }
