--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -33,6 +33,7 @@ $color-default-white-opacity30:     rgb(255, 255, 255, 0.3);
 $color-default-white-opacity20:     rgb(255, 255, 255, 0.2);
 
 $color-default-profect:             #484848;
+$color-default-profect-opacity90:   rgb(72, 72, 72, 0.9);
 $color-default-profect-opacity80:   rgb(72, 72, 72, 0.8);
 $color-default-profect-opacity60:   rgb(72, 72, 72, 0.6);
 $color-default-profect-opacity30:   rgb(72, 72, 72, 0.3);
