--- a/source/sass/blocks/about.scss
+++ b/source/sass/blocks/about.scss
@@ -10,7 +10,7 @@
   }
 
   @include vp-767 {
-    padding: 70px 0 50px;
+    padding: 68px 0 69px;
   }
 }
 
@@ -24,7 +24,7 @@
   }
 
   @include vp-767 {
-    flex-basis: 100%;
+    flex-basis: 95%;
   }
 }
 
@@ -41,7 +41,7 @@
   }
 
   @include vp-767 {
-    margin: 0 0 15px;
+    margin: 0 0 14px;
     font-size: 20px;
     line-height: 20px;
   }
@@ -77,7 +77,7 @@
 
   @include vp-767 {
     flex-basis: 100%;
-    margin: 0;
+    margin: 0 0 10px;
   }
 }
 
@@ -110,6 +110,7 @@
   }
 
   @include vp-767 {
+    margin: 0 0 25px;
     font-size: 14px;
   }
 }
@@ -176,7 +177,7 @@
 
   @include vp-767 {
     gap: 5px;
-    padding: 24px 16px;
+    padding: 20px 17px 21px 19px;
   }
 }
 
