--- a/source/sass/blocks/custom-select.scss
+++ b/source/sass/blocks/custom-select.scss
@@ -12,6 +12,11 @@
     font-weight: 400;
     line-height: 14px;
     order: 1;
+
+    @include vp-767 {
+      font-size: 12px;
+      line-height: 14px;
+    }
   }
 
   select {
