--- a/source/sass/blocks/hero-main.scss
+++ b/source/sass/blocks/hero-main.scss
@@ -30,6 +30,11 @@
   background-color: transparent;
   border: 1px solid $color-default-blue;
   opacity: 1;
+
+  @include vp-767 {
+    width: 8px;
+    height: 8px;
+  }
 }
 
 .hero__pagination .swiper-pagination-bullet-active {
@@ -38,19 +43,19 @@
 
 .hero-main__header {
   position: relative;
-  padding: 40px 50px 30px 50px;
+  padding: 40px 50px 30px;
   width: 78.06%;
   color: $color-default-blue;
   background-color: $color-default-white;
   border-radius: 0 30px 30px 0;
 
   @include vp-1199 {
-    padding: 30px 40px 24px 40px;
+    padding: 30px 40px 24px;
     width: 97.2%;
   }
 
   @include vp-767 {
-    padding: 20px 14px 16px 14px;
+    padding: 21px 14px 16px;
     border-radius: 0 16px 16px 0;
     width: 100%;
   }
@@ -128,7 +133,8 @@
 
   @include vp-767 {
     position: relative;
-    padding: 0 14px 15px;
+    margin: 0;
+    padding: 0 14px 10px;
     background-color: $color-default-white;
     border-radius: 0 0 14px 0;
   }
@@ -153,6 +159,7 @@
     line-height: 20px;
 
     @include vp-767 {
+      margin: -5px 0 0;
       font-size: 14px;
     }
   }
@@ -164,7 +171,7 @@
   @include vp-767 {
     position: relative;
     margin: 0;
-    padding: 10px 15px;
+    padding: 12px 17px;
     min-width: 182px;
     background-color: $color-default-white;
     border-radius: 0 0 14px 14px;
