--- a/source/sass/blocks/input-text.scss
+++ b/source/sass/blocks/input-text.scss
@@ -25,6 +25,11 @@
   font-size: 14px;
   font-weight: 400;
   line-height: 18px;
+
+  @include vp-767 {
+    font-size: 12px;
+    line-height: 14px;
+  }
 }
 
 .input-text__input {
