--- a/source/sass/blocks/news-card.scss
+++ b/source/sass/blocks/news-card.scss
@@ -3,6 +3,7 @@
   background-position: center;
   background-repeat: no-repeat;
   background-color: $color-default-blue;
+  border-radius: 12px;
 
   &--internships {
     background-image: url("../img/news/internships.jpg");
@@ -51,6 +52,10 @@
   @include vp-1199 {
     width: calc(100% - 84px);
   }
+
+  @include vp-767 {
+    width: calc(100% - 28px);
+  }
 }
 
 .swiper-slide:first-child .news-card__info {
@@ -58,6 +63,10 @@
 
   @include vp-1199 {
     width: calc(100% - 84px);
+  }
+
+  @include vp-767 {
+    width: calc(100% - 28px);
   }
 }
 
@@ -68,6 +77,10 @@
   @include vp-1199 {
     width: calc(100% - 117px);
   }
+
+  @include vp-767 {
+    width: calc(100% - 90px);
+  }
 }
 
 .swiper-slide:first-child .news-card__header {
@@ -77,6 +90,10 @@
   @include vp-1199 {
     width: calc(100% - 117px);
   }
+
+  @include vp-767 {
+    width: calc(100% - 90px);
+  }
 }
 
 .news-card__wrapper {
@@ -85,9 +102,14 @@
   justify-content: flex-end;
   align-items: flex-start;
   min-height: 400px;
+  border-radius: 12px;
 
   @include vp-1199 {
     min-height: 350px;
+  }
+
+  @include vp-767 {
+    min-height: 330px;
   }
 }
 
@@ -144,6 +166,11 @@
     font-size: 20px;
     line-height: 24px;
   }
+
+  @include vp-767 {
+    font-size: 16px;
+    line-height: 18px;
+  }
 }
 
 .news-card__info {
@@ -155,6 +182,10 @@
   padding: 8px 18px 12px 0;
   background-color: $color-timber-wolf;
   border-radius: 0 12px 0 0;
+
+  @include vp-767 {
+    padding: 13px 10px 10px 0;
+  }
 }
 
 .news-card__info svg {
@@ -172,5 +203,10 @@
 
   @include vp-1199 {
     line-height: 20px;
+  }
+
+  @include vp-767 {
+    font-size: 12px;
+    line-height: 14px;
   }
 }
