--- a/source/sass/blocks/news.scss
+++ b/source/sass/blocks/news.scss
@@ -27,6 +27,7 @@
   }
 
   @include vp-767 {
+    margin: 0 0 28px;
     font-size: 20px;
     line-height: 20px;
   }
@@ -54,6 +55,7 @@
     justify-content: flex-start;
     flex-wrap: nowrap;
     gap: 0;
+    margin: 0 0 24px;
   }
 }
 
@@ -75,7 +77,7 @@
 
   @include vp-767 {
     flex: 1;
-    padding: 10px 14px;
+    padding: 8px 14px;
     font-size: 12px;
     line-height: 12px;
     letter-spacing: 0.24px;
@@ -102,6 +104,7 @@
   margin: 0 0 40px;
 
   @include vp-767 {
+    margin: 0 0 24px;
     padding: 0 15px;
   }
 }
@@ -118,6 +121,7 @@
 
   @include vp-767 {
     padding: 0 15px;
+    height: 26px;
   }
 }
 
@@ -129,6 +133,10 @@
   align-items: center;
   gap: 12px;
   z-index: 1;
+
+  @include vp-767 {
+    gap: 9px;
+  }
 }
 
 .news__buttons .swiper-pagination-bullet {
@@ -144,6 +152,11 @@
   font-weight: 400;
   line-height: 20px;
   opacity: 1;
+
+  @include vp-767 {
+    width: 26px;
+    height: 26px;
+  }
 
   @include hover-focus-visible {
     color: $color-default-blue;
@@ -189,5 +202,17 @@
 
   &--next {
     right: 0;
+  }
+
+  @include vp-767 {
+    top: 0;
+
+    &--prev {
+      left: 15px;
+    }
+
+    &--next {
+      right: 15px;
+    }
   }
 }
