--- a/source/sass/blocks/programs.scss
+++ b/source/sass/blocks/programs.scss
@@ -10,7 +10,7 @@
   }
 
   @include vp-767 {
-    padding: 0 0 35px;
+    padding: 0 0 67px;
   }
 }
 
@@ -54,6 +54,7 @@
   }
 
   @include vp-767 {
+    margin: 32px 0 30px;
     order: 3;
   }
 }
