--- a/source/sass/blocks/reviews.scss
+++ b/source/sass/blocks/reviews.scss
@@ -13,7 +13,7 @@
   }
 
   @include vp-767 {
-    padding: 67px 15px;
+    padding: 50px 15px 30px;
   }
 }
 
@@ -45,6 +45,7 @@
   margin: 45px 0 40px;
 
   @include vp-767 {
+    margin: 30px 0 35px;
     order: 3;
   }
 }
