--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -52,6 +52,8 @@
 @import "blocks/icon";
 @import "blocks/footer-footer";
 @import "blocks/modal";
+@import "blocks/input-text-modal";
+@import "blocks/input-checkbox-modal";
 @import "blocks/custom-select";
 
 // ---------------------------------
