--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -24,11 +24,13 @@ $color-purple-blue:                 #275699;
 $color-timber-wolf:                 #f0efe9;
 $color-timber-wolf-opacity90:       rgb(240, 239, 233, 0.9);
 $color-timber-wolf-opacity80:       rgb(240, 239, 233, 0.8);
+$color-timber-wolf-opacity60:       rgb(240, 239, 233, 0.6);
 
 $color-default-white:               #ffffff;
 $color-default-white-opacity90:     rgb(255, 255, 255, 0.9);
 $color-default-white-opacity80:     rgb(255, 255, 255, 0.8);
 $color-default-white-opacity70:     rgb(255, 255, 255, 0.7);
+$color-default-white-opacity40:     rgb(255, 255, 255, 0.4);
 $color-default-white-opacity30:     rgb(255, 255, 255, 0.3);
 $color-default-white-opacity20:     rgb(255, 255, 255, 0.2);
 
@@ -37,6 +39,10 @@ $color-default-profect-opacity90:   rgb(72, 72, 72, 0.9);
 $color-default-profect-opacity80:   rgb(72, 72, 72, 0.8);
 $color-default-profect-opacity60:   rgb(72, 72, 72, 0.6);
 $color-default-profect-opacity30:   rgb(72, 72, 72, 0.3);
+
+
+$color-gray-window-opacity50:       rgba(169, 175, 183, 0.5);
+$color-gray-window-opacity20:       rgba(169, 175, 183, 0.2);
 
 $color-red:                         #ff5e66;
 $color-red-opacity20:               rgb(255, 94, 102, 0.2);
