--- a/source/sass/blocks/input-checkbox-modal.scss
+++ b/source/sass/blocks/input-checkbox-modal.scss
@@ -1,46 +1,46 @@
-.input-checkbox {
+.input-checkbox-modal {
   margin: 0;
   padding: 0;
   border: 0;
 }
 
-.input-checkbox__control {
+.input-checkbox-modal__control {
   display: flex;
   align-items: center;
   min-height: 20px;
   cursor: pointer;
 
   @include hover-focus-visible {
-    .input-checkbox__check {
+    .input-checkbox-modal__check {
       &::before {
-        border: 1px solid $color-default-white;
+        border: 1px solid $color-default-profect;
       }
     }
 
-    input:checked + .input-checkbox__check::after {
-      border-right: 1px solid $color-default-white;
-      border-top: 1px solid $color-default-white;
+    input:checked + .input-checkbox-modal__check::after {
+      border-right: 1px solid $color-default-profect;
+      border-top: 1px solid $color-default-profect;
     }
 
-    input:checked + .input-checkbox__check::before {
+    input:checked + .input-checkbox-modal__check::before {
       background-color: transparent;
     }
   }
 }
 
-.input-checkbox__control input:checked + .input-checkbox__check::after {
+.input-checkbox-modal__control input:checked + .input-checkbox-modal__check::after {
   opacity: 1;
 }
 
-.input-checkbox__control input:checked + .input-checkbox__check::before {
-  background-color: $color-default-white;
+.input-checkbox-modal__control input:checked + .input-checkbox-modal__check::before {
+  background-color: $color-default-blue;
 }
 
-.input-checkbox__control input:checked ~ .input-checkbox__label {
-  color: $color-default-white;
+.input-checkbox-modal__control input:checked ~ .input-checkbox-modal__label {
+  color: $color-default-profect;
 }
 
-.input-checkbox__check {
+.input-checkbox-modal__check {
   position: relative;
 
   &::before {
@@ -53,7 +53,7 @@
     width: 20px;
     height: 20px;
     background-color: transparent;
-    border: 1px solid $color-default-white-opacity70;
+    border: 1px solid $color-default-profect-opacity30;
   }
 
   &::after {
@@ -64,17 +64,17 @@
     left: 5px;
     width: 8px;
     height: 6px;
-    border-right: 1px solid $color-default-blue;
-    border-top: 1px solid $color-default-blue;
+    border-right: 1px solid $color-default-white;
+    border-top: 1px solid $color-default-white;
     transform: rotate(135deg);
     opacity: 0;
   }
 }
 
-.input-checkbox__label {
+.input-checkbox-modal__label {
   margin: 0;
   padding: 0 0 0 30px;
-  color: $color-default-white-opacity70;
+  color: $color-default-profect-opacity80;
   font-size: 12px;
   font-weight: 400;
   line-height: 12px;
@@ -82,11 +82,11 @@
   z-index: 1;
 }
 
-.input-checkbox__control input:hover ~ .input-checkbox__label {
-  color: $color-default-white;
+.input-checkbox-modal__control input:hover ~ .input-checkbox-modal__label {
+  color: $color-default-profect;
 }
 
-.input-checkbox__control.is-invalid .input-checkbox__check {
+.input-checkbox-modal__control.is-invalid .input-checkbox-modal__check {
   &::before {
     background-color: $color-red-opacity20;
     border: 1px solid $color-red;
