--- a/source/sass/blocks/programs-card.scss
+++ b/source/sass/blocks/programs-card.scss
@@ -69,6 +69,7 @@
   position: relative;
   padding: 13px 18px 1px;
   width: calc(100% - 158px);
+  min-width: 214px;
   background-color: $color-timber-wolf;
   border-radius: 12px 12px 0 0;
 
@@ -109,7 +110,7 @@
   gap: 50px;
   padding: 12px 18px 15px 18px;
   width: calc(100% - 31px);
-  height: 79px;
+  min-height: 79px;
   background-color: $color-timber-wolf;
   border-radius: 0 12px 12px 12px;
 
