--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -96,6 +96,17 @@
   padding: 5px 0;
   color: $color-default-white;
   border-bottom: 1px solid transparent;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 26px;
+
+  @include vp-1199 {
+    line-height: 20px;
+  }
+
+  @include vp-767 {
+    font-size: 14px;
+  }
 
   @include hover-focus-visible {
     border-bottom: 1px solid $color-default-white;
